Fix issue with babel in the browser by using modern modules instead of babel

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,6 @@
 <title>DSA4 Charakterbogen</title>
 <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
 <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <style>
 body { font-family:sans-serif; margin:20px; }
 input, button, select { margin:6px; }
@@ -26,7 +25,7 @@ h4 { margin-bottom:4px; margin-top:12px; }
 
 <div id="root"></div>
 
-<script type="text/babel">
+<script type="module">
 
 import { rollD20, processSkillRoll, rollAttribute } from './dice.js';
 import { exportCharacters, importCharacters } from './storage.js';
