--- a/index.htm
+++ b/index.htm
@@ -148,7 +148,7 @@ function App() {
     setNewSkillAttr("");
   }
 
-  if(!currentChar) return <div><button onClick={newCharacter}>Neuer Charakter</button></div>;
+  if(!currentChar) return '<div><button onClick={newCharacter}>Neuer Charakter</button></div>';
 
   const groupedSkills = {};
   skills.forEach(skill => { const cat = skill.category || "Allgemein"; if(!groupedSkills[cat]) groupedSkills[cat]=[]; groupedSkills[cat].push(skill); });
