Use babel & proper build

--- a/index.htm
+++ b/index.htm
@@ -28,8 +28,8 @@ h4 { margin-bottom:4px; margin-top:12px; }
 
 <script type="text/babel">
 
-import { rollD20, processSkillRoll, rollAttribute } from './dice.js';
-import { exportCharacters, importCharacters } from './storage.js';
+import { rollD20, processSkillRoll, rollAttribute } from './dist/dice.js';
+import { exportCharacters, importCharacters } from './dist/storage.js';
 
 const { useState, useEffect } = React;
 const ATTRS = ["MU","KL","IN","CH","FF","GE","KO","KK"];
